# sfml-test

./: settings.gradle
.github/workflows/: build.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RandomColor.cpp  RandomColor.hpp  alt_scenes.hpp  animation.hpp  color_themes.hpp  constants.hpp  game.hpp  helper.hpp  main.cpp  rounded_rect.hpp  ui.hpp  utils.hpp
app/src/main/cpp2/: constants.hpp  game.hpp  rounded_rect.hpp
app/src/main/res/values/: strings.xml
